@@ -2,6 +2,7 @@
 package edu.colorado.phet.energyskatepark.basics;
 
 import edu.colorado.phet.common.phetcommon.model.property.ObservableProperty;
+import edu.colorado.phet.common.phetcommon.util.Option;
 import edu.colorado.phet.common.piccolophet.nodes.SpeedometerNode;
 import edu.colorado.phet.energyskatepark.EnergySkateParkResources;
 
@@ -11,7 +12,7 @@ import edu.colorado.phet.energyskatepark.EnergySkateParkResources;
  * @author Sam Reid
  */
 public class ESPSpeedometerNode extends SpeedometerNode {
-    public ESPSpeedometerNode( final ObservableProperty<Double> speed ) {
+    public ESPSpeedometerNode( final ObservableProperty<Option<Double>> speed ) {
 
         //Using 20 m/s as max makes 1 m/s per tick on the speedometer node since it has 20 ticks.
         super( EnergySkateParkResources.getString( "properties.speed" ), 120, speed, 20 );
